# boundless

./: .env.base  .env.base-sepolia  .env.broker-template  .env.eth-sepolia  .gitattributes  .gitignore  .gitmodules  Cargo.toml  biome.json  broker-template.toml  compose.yml  deployments-check.py  foundry.toml  justfile  license-check.py  offer.yaml  remappings.txt  request.yaml
.github/: CODEOWNERS
.github/workflows/: bento-release.yml  bento.yml  broker-release.yml  contracts.yml  documentation.yml  linear.yml  main.yml
bento/: Cargo.toml  README.md
bento/scripts/: docker-cleanup.sh  docker-setup.sh  run_tests.sh
contracts/: deployment.toml  update_deployment_toml.py
contracts/deployment-test/: Deploymnet.t.sol  PoVWDeployment.t.sol
contracts/scripts/: BoundlessScript.s.sol  Config.s.sol  Deploy.PoVW.s.sol  Deploy.s.sol  Manage.PoVW.s.sol  Manage.s.sol  PoVWLib.s.sol  VERIFY.md  manage  manage-povw  test
contracts/snapshots/: BoundlessMarketBasicTest.json  BoundlessMarketBench.json
contracts/src/: BoundlessMarket.sol  HitPoints.sol  IBoundlessMarket.sol
contracts/test/: BoundlessMarket.t.sol  HitPoints.t.sol  MockZKC.sol  TestUtils.sol  TestUtilsZKC.sol
crates/bench/: Cargo.toml
crates/boundless-cli/: Cargo.toml  build.rs
crates/boundless-cli/src/: config.rs  lib.rs
crates/boundless-cli/src/commands/: mod.rs
crates/boundless-cli/src/commands/povw/: claim.rs  claim_reward.rs  mod.rs  prepare.rs  prove_update.rs  send_update.rs  state.rs  submit.rs
crates/boundless-cli/src/commands/zkc/: balance_of.rs  calculate_rewards.rs  claim_rewards.rs  delegate_rewards.rs  get_active_token_id.rs  get_current_epoch.rs  get_epoch_end_time.rs  get_rewards_delegates.rs  get_staked_amount.rs  mod.rs  stake.rs  unstake.rs
crates/boundless-cli/tests/: povw.rs  zkc.rs
crates/boundless-market/: Cargo.toml  build.rs
crates/broker/: Cargo.toml  order-prioritization-expected-value.md
crates/broker-stress/: Cargo.toml
crates/distributor/: Cargo.toml
crates/indexer/: Cargo.toml
crates/indexer/migrations/: 10_staking_positions.sql  11_delegation_powers.sql  12_address_history_indexes.sql  13_summary_statistics.sql  14_staking_rewards.sql  15_staking_rewards_refactor.sql  16_add_epoch_times_to_staking.sql  17_add_updated_at_to_summaries.sql  2_events.sql  3_proof_requests.sql  4_fulfillments.sql  7_povw_rewards_by_epoch.sql  8_povw_rewards_aggregate.sql  9_add_staked_amount.sql
crates/indexer/src/: db.rs  lib.rs  test_utils.rs
crates/indexer/src/db/: market.rs  mod.rs  rewards.rs
crates/indexer/src/market/: mod.rs  service.rs
crates/indexer/src/rewards/: mod.rs  service.rs
crates/indexer/tests/: basic.rs  market.rs  rewards.rs
crates/indexer/tests/market/: basic.rs
crates/indexer/tests/rewards/: delegations_integration.rs  povw_integration.rs  staking_integration.rs
crates/indexer/tests/rewards/common/: mod.rs
crates/lambdas/indexer-api/: Cargo.toml  README.md  manage_local
crates/lambdas/indexer-api/src/: db.rs  handler.rs  lib.rs  main.rs  models.rs  openapi.rs  utils.rs
crates/lambdas/indexer-api/src/routes/: delegations.rs  mod.rs  povw.rs  staking.rs
crates/lambdas/indexer-api/tests/: local_integration.rs
crates/lambdas/indexer-api/tests/local_integration/: delegations.rs  docs.rs  povw.rs  staking.rs
crates/order-generator/: Cargo.toml
crates/order-stream/: Cargo.toml
crates/povw/: Cargo.toml  build.rs  update-guest-bins.sh
crates/povw/elfs/: boundless-povw-log-updater.iid  boundless-povw-mint-calculator.iid
crates/povw/log-updater/: Cargo.toml
crates/povw/log-updater/src/: main.rs
crates/povw/mint-calculator/: Cargo.toml
crates/povw/mint-calculator/src/: main.rs
crates/povw/src/: deployments.rs  lib.rs  log_updater.rs  mint_calculator.rs  zkc.rs
crates/povw/src/contracts/: bytecode.rs  mod.rs
crates/povw/src/contracts/artifacts/: IPovwAccounting.sol  IPovwMint.sol  IZKC.sol
crates/povw/tests/: log-updater.rs  mint-calculator.rs  workflow.rs
crates/rewards/: Cargo.toml  README.md
crates/rewards/src/: cache.rs  events.rs  lib.rs  povw.rs  powers.rs  staking.rs
crates/slasher/: Cargo.toml
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs  market.rs  povw.rs  verifier.rs  zkc.rs
crates/zkc/: Cargo.toml  build.rs
crates/zkc/src/: deployments.rs  lib.rs
crates/zkc/src/contracts/: mod.rs
crates/zkc/src/contracts/artifacts/: IRewards.sol  IStaking.sol  IStakingRewards.sol  IVotes.sol  IZKC.sol
dockerfiles/: agent.dockerfile  agent.prebuilt.dockerfile  bento_cli.dockerfile  broker.prebuilt.dockerfile  market-indexer.dockerfile  rest_api.prebuilt.dockerfile  rewards-indexer.dockerfile
documentation/: package.json  vocs.config.ts
documentation/doc-test/: Cargo.toml
documentation/scripts/: check-links.ts  process-forge-docs.ts
documentation/site/: footer.tsx  layout.tsx  styles.css
examples/composition/: Cargo.toml
examples/counter-with-callback/: Cargo.toml
examples/smart-contract-requestor/: Cargo.toml
infra/builder/: configure_builder.sh  index.ts  pulumiResources.ts
infra/distributor/: Pulumi.l-prod-11155111.yaml  Pulumi.l-prod-8453.yaml  Pulumi.l-prod-84532.yaml  Pulumi.l-staging-84532.yaml  Pulumi.prod-11155111.yaml  Pulumi.prod-8453.yaml  Pulumi.prod-84532.yaml  Pulumi.staging-11155111.yaml  Pulumi.staging-84532.yaml  index.ts  package.json
infra/indexer/: Pulumi.l-prod-1.yaml  Pulumi.l-prod-11155111.yaml  Pulumi.l-prod-8453.yaml  Pulumi.l-prod-84532.yaml  Pulumi.l-staging-11155111.yaml  Pulumi.l-staging-84532.yaml  alarmConfig.ts  index.ts
infra/order-generator/: Pulumi.l-prod-11155111.yaml  Pulumi.l-prod-8453.yaml  Pulumi.l-prod-84532.yaml  Pulumi.l-staging-84532.yaml  Pulumi.prod-11155111.yaml  Pulumi.prod-8453.yaml  Pulumi.prod-84532.yaml  Pulumi.staging-11155111.yaml  Pulumi.staging-84532.yaml  index.ts  package.json
infra/order-stream/: Pulumi.l-prod-11155111.yaml  Pulumi.l-prod-8453.yaml  Pulumi.l-prod-84532.yaml  Pulumi.l-staging-84532.yaml  package.json
infra/pipelines/: Pulumi.prod.yaml  README  index.ts
infra/prover/: index.ts  (+11 more)
scripts/: setup.sh
(+212 files in other folders)
