[package]
name = "boundless-indexer"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[package.metadata.release]
release = false

[[bin]]
name = "market-indexer"
path = "src/bin/market-indexer.rs"

[[bin]]
name = "rewards-indexer"
path = "src/bin/rewards-indexer.rs"

[dependencies]
alloy = { workspace = true, features = ["network", "node-bindings", "rpc-types", "providers", "transports", "sol-types", "contract", "signers", "signer-local"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
boundless-market = { workspace = true }
boundless-povw = { workspace = true }
boundless-rewards = { workspace = true }
boundless-zkc = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [ "any", "postgres", "sqlite", "runtime-tokio", "json", "migrate", "macros" ] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
boundless-cli = { workspace = true }
boundless-market = { workspace = true }
boundless-test-utils = { workspace = true }
futures-util = { workspace = true }
indexer-monitor = { path = "../lambdas/indexer-monitor" }
risc0-zkvm = { workspace = true, features = ["std", "default"] }
tracing-test = { workspace = true }

