[package]
name = "boundless-povw"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
alloy-chains = "0.2"
alloy-contract = { version = "1.0", optional = true }
alloy-primitives = { version = "1.0", features = ["serde", "k256"] }
alloy-provider = { version = "1.0", optional = true }
alloy-signer = { version = "1.0", optional = true }
alloy-sol-types = "1.0"
anyhow = "1.0"
borsh = { version = "1.5", default-features = false, features = ["std", "derive"] }
bytemuck = { version = "1.23", features = ["must_cast"] }
clap = { workspace = true, optional = true }
derive_builder = "0.20.2"
postcard = { version = "1.1", features = ["alloc"] }
risc0-ethereum-contracts = { workspace = true, optional = true }
risc0-povw = { workspace = true, features = ["guest"] }
risc0-steel = { git = "https://github.com/boundless-xyz/steel", branch = "release-2.4" }
risc0-zkvm = { workspace = true, features = ["client", "unstable"], optional = true }
ruint = { version = "1.15", default-features = false, features = ["borsh", "std"] }
serde = "1"
tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
alloy = { workspace = true, features = ["network", "node-bindings", "rpc-types", "providers", "transports", "sol-types", "contract", "signers", "signer-local"] }
# blst is included directly to mitigate a build issue where blst does not always end up linked.
blst = { version = "0.3.15", default-features = false }
boundless-test-utils = { workspace = true, features = ["povw"] }
derive_builder = "0.20.2"
rand = "0.9"
risc0-ethereum-contracts = { workspace = true, features = ["unstable"] }
risc0-povw = { workspace = true, features = ["prover"] }
risc0-zkvm = { workspace = true, features = ["client", "unstable"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[build-dependencies]
risc0-build = { workspace = true, features = ["unstable"], optional = true }
risc0-build-ethereum = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }

[package.metadata.risc0]
methods = ["mint-calculator", "log-updater"]

[package.metadata.release]
release = false

[features]
default = ["prover"]
host = ["signer", "risc0-steel/host", "dep:alloy-provider", "dep:alloy-contract", "dep:serde_json", "dep:clap", "dep:url"]
prover = ["host", "dep:risc0-zkvm", "dep:risc0-ethereum-contracts", "dep:tokio"]
signer = ["dep:alloy-signer"]
build-guest = [
  "dep:risc0-build",
  "dep:risc0-build-ethereum",
]
