[package]
name = "boundless-povw-log-updater"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
alloy-primitives = { version = "1.0", features = ["serde", "k256"] }
alloy-sol-types = "1.0"
borsh = { version = "1.5", default-features = false, features = ["std"] }
boundless-povw = { path = "..", default-features = false }
risc0-povw = { version = "0.4", default-features = false, features = ["guest"] }
risc0-zkvm = { version = "3.0.3", default-features = false, features = ["std", "unstable"] }

[patch.crates-io]
# enable RISC Zero's precompiles
blst = { git = "https://github.com/risc0/blst", tag = "v0.3.15-risczero.1" }
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "c-kzg/v2.1.1-risczero.2" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
